# ClickUp-Orchestrator

./: .gitignore  README.md
backend/: Cargo.toml
backend/config/: development.yaml  test.yaml
backend/migration/src/: lib.rs  m20251228_205515_orchestrator_tasks.rs  m20251228_205522_process_sessions.rs  m20251228_205527_settings.rs  m20260107_000001_add_task_output_log.rs  m20260108_000001_orchestrator_task_logs.rs
backend/src/: app.rs
backend/src/controllers/: clickup.rs  files.rs  git.rs  mod.rs  settings.rs  setup.rs  tasks.rs  ui_refinements.rs  voice.rs  ws.rs
backend/src/initializers/: clickup_poller.rs  mod.rs  process_monitor.rs  task_log_listener.rs
backend/src/models/: mod.rs  orchestrator_task_logs.rs  orchestrator_tasks.rs  process_sessions.rs  settings.rs
backend/src/models/_entities/: mod.rs  orchestrator_task_logs.rs  orchestrator_tasks.rs  prelude.rs  process_sessions.rs  settings.rs
backend/src/services/: clickup.rs  mod.rs  process_manager.rs  task_logs.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: app.d.ts
frontend/src/lib/api/: clickup.ts  client.ts  files.ts  git.ts  settings.ts  setup.ts  tasks.ts  ui-refinements-ws.ts  ui-refinements.ts  voice.ts  websocket.ts
frontend/src/lib/components/editor/: CodeEditor.svelte  EditorPanel.svelte  EditorTab.svelte  FileExplorer.svelte  FileTreeNode.svelte
frontend/src/lib/components/kanban/: KanbanBoard.svelte  (+2 more)
frontend/src/lib/stores/: settings.svelte.ts  tasks.svelte.ts
frontend/src/lib/types/: editor.ts  ui-refinements.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/editor/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/ui-refinements/: +page.svelte
frontend/src/routes/voice/: +page.svelte
(+17 files in other folders)
